# tabpfn-client

./: .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE  LICENSE.txt  README.md  TabPFNDemo.ipynb  demo.ipynb  example.py  pyproject.toml  quick_caafe_test.py  quick_test.py  requirements-dev.txt  requirements-test.txt  requirements.txt  requirements.txt.bak  ruff.toml
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: pull_request.yml
tabpfn_client/: __init__.py  browser_auth.py  caafe_generator.py  client.py  config.py  constants.py  estimator.py  mock_prediction.py  prompt_agent.py  remote_tabpfn_classifier.py  server_config.yaml  server_spec.yaml  service_wrapper.py  tabpfn_classifier.py  tabpfn_classifier_interface.py  tabpfn_service_client.py
tabpfn_client/.tabpfn/: config
tabpfn_client/tests/: mock_tabpfn_server.py  quick_test.py
tabpfn_client/tests/integration/: test_server_config.py  test_tabpfn_classifier.py  test_tabpfn_service_client.py
tabpfn_client/tests/unit/: test_browser_auth.py  test_client.py  test_prompt_agent.py  test_remote_tabpfn_classifier.py  test_service_wrapper.py  test_tabpfn_classifier.py  test_tabpfn_regressor.py  test_tabpfn_service_client.py  test_text_features.py
