[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tabpfn-client"
version = "0.0.19"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.24.1",
    "pandas>=1.3.0",
    "omegaconf>=2.3.0",
    "password_strength",
]

[tool.hatch.build.targets.wheel]
exclude = ["tabpfn_client/.tabpfn", "models_diff"]

[tool.hatch.build.targets.sdist]
exclude = ["tabpfn_client/.tabpfn", "models_diff"]
