[build-system]
requires = ["hatchling", "hatch-requirements-txt"]
build-backend = "hatchling.build"

[project]
name = "tabpfn-client"
version = "0.0.24"
requires-python = ">=3.10"
dynamic = ["dependencies", "optional-dependencies"]

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]

[tool.hatch.metadata.hooks.requirements_txt.optional-dependencies]
dev = ["requirements-dev.txt", "requirements-test.txt"]

[tool.hatch.build.targets.wheel]
exclude = ["tabpfn_client/.tabpfn", "models_diff"]

[tool.hatch.build.targets.sdist]
exclude = ["tabpfn_client/.tabpfn", "models_diff"]
