[build-system]
requires = ["hatchling", "hatch-requirements-txt"]
build-backend = "hatchling.build"

[project]
name = "tabpfn-client"
version = "0.1.1"
requires-python = ">=3.9,<3.12"
# doesn't work with 3.12 and 3.13 because cityhash wheels are not available yet
# (see https://github.com/escherba/python-cityhash/issues/88)
# (can be bypassed by installing with conda)
dynamic = ["dependencies", "optional-dependencies"]

classifiers = [
  'Intended Audience :: Science/Research',
  'Intended Audience :: Developers',
  'License :: OSI Approved :: Apache Software License',
  'Programming Language :: Python',
  'Topic :: Software Development',
  'Topic :: Scientific/Engineering',
  'Operating System :: POSIX',
  'Operating System :: Unix',
  'Operating System :: MacOS',
  'Programming Language :: Python :: 3',
  'Programming Language :: Python :: 3.9',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.11',
]
license = { file = "LICENSE.txt" }

[project.urls]
documentation = "https://priorlabs.ai/docs"
source = "https://github.com/priorlabs/tabpfn-client"

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]

[tool.hatch.metadata.hooks.requirements_txt.optional-dependencies]
dev = ["requirements-dev.txt", "requirements-test.txt"]

[tool.hatch.build.targets.wheel]
exclude = ["tabpfn_client/.tabpfn", "models_diff"]

[tool.hatch.build.targets.sdist]
exclude = ["tabpfn_client/.tabpfn", "models_diff"]
